--- a/source/posts/2016-09-23-usando-o-selector-target-para-criar-modal-apenas-com-css.md.erb
+++ b/source/posts/2016-09-23-usando-o-selector-target-para-criar-modal-apenas-com-css.md.erb
@@ -1,5 +1,5 @@
 ---
-title: "Usando o selector target para criar modal apenas CSS"
+title: "Usando o selector target para criar modal apenas com CSS"
 date: 2016-09-23 23:31:58
 comments: true
 description: "Um pseudo selector das CSS3 muito útil é o :target, ele fornece recursos de estilo para um elemento cujo o ID está visivel na url"
@@ -45,7 +45,9 @@ Sendo assim, então podemos aplicar o `display: block` em nosso modal, certo? Is
 }
 ```
 
-O resto vc já sabe né, estilize o quanto quiser e de preferência anime-o.
+O resto vc já sabe né, estilize o quanto quiser e de preferência anime-o para ficar mais bonito.
+
+---
 
 É isso, peço desculpas se o artigo não foi grande coisa pra você, eu não posso fazer nada se as CSS são simples demais. 😌
 
