--- a/source/posts/2016-09-23-usando-o-selector-target-para-criar-modal-apenas-com-css.md.erb
+++ b/source/posts/2016-09-23-usando-o-selector-target-para-criar-modal-apenas-com-css.md.erb
@@ -1,5 +1,5 @@
 ---
-title: "Usando o selector target para criar modal apenas com CSS"
+title: "Usando o pseudo selector :target para criar modal apenas com CSS"
 date: 2016-09-23 23:31:58
 comments: true
 description: "Um pseudo selector das CSS3 muito útil é o :target, ele fornece recursos de estilo para um elemento cujo o ID está visivel na url"
