Post: Ativando o tema Dark nativo do Chrome DevTools

--- a/source/assets/stylesheets/base/_lists.sass
+++ b/source/assets/stylesheets/base/_lists.sass
@@ -12,13 +12,9 @@ ul
 dl
   list-style: none
 
-ul
-  list-style: circle inside
-
-ol
-  list-style: decimal inside
-
 dt,
-dd,
+dd
+  margin-bottom: 1rem
+
 li
-  margin-bottom: 1.0rem
+  margin-bottom: .4rem
