--- a/source/assets/stylesheets/base/_typography.sass
+++ b/source/assets/stylesheets/base/_typography.sass
@@ -40,6 +40,7 @@ small
 big
   font-size: 150%
 
+h1, h2, h3, h4, h5, h6,
 p, dl, table, blockquote
   margin: 0 0 $spacing-small 0
 
@@ -47,7 +48,6 @@ h1, h2, h3, h4, h5, h6
   color: inherit
   font-weight: $font-weight-bold
   letter-spacing: -.05rem
-  margin: 0 0 $spacing-base
 
   a
     color: inherit
