--- a/source/assets/stylesheets/components/_article.sass
+++ b/source/assets/stylesheets/components/_article.sass
@@ -91,6 +91,8 @@ iframe
     height: 100%
 
 .share-icons
+  text-align: center
+
   ul
     margin: 0
     padding: 0
@@ -114,7 +116,7 @@ iframe
     vertical-align: middle
     display: block
     opacity: .2
-    transition: opacity .2s ease-in-out
+    transition: opacity .2s ease-in-out, transform .2s ease-in-out
     color: $color-base
     text-decoration: none
 
@@ -130,6 +132,7 @@ iframe
 
     &:hover
       opacity: .75
+      transform: rotate(8deg)
 
       &:after
         opacity: 1
