--- a/source/posts/2016-09-24-ativando-o-tema-dark-nativo-do-chrome-dev-tools.md.erb
+++ b/source/posts/2016-09-24-ativando-o-tema-dark-nativo-do-chrome-dev-tools.md.erb
@@ -16,7 +16,7 @@ O [Google Chrome](https://www.google.com/chrome/) em uma de suas atualizações 
 
 ### A surpresa de alguns
 
-Estamos no [Meetup de Front-end aqui em Curitiba](https://www.eventick.com.br/6o-femug-cwb), onde palestrei sobre [Jekyll](http://jekyllrb.com/), em um determinado momento precisei abri o navegador e inspecionar alguns elementos no Google Chrome, o tema _"default"_ do _DevTools_ não ficou muito bem aos olhos de quem estava vendo de longe, então eu abri o _Settings_ e troquei de _"default"_ para _"dark"_ e tudo ficou perfeito.
+Estávamos no [Meetup de Front-end aqui em Curitiba](https://www.eventick.com.br/6o-femug-cwb), onde palestrei sobre [Jekyll](http://jekyllrb.com/), e em um determinado momento precisei abri o navegador e inspecionar alguns elementos no Google Chrome, o tema _"default"_ do _DevTools_ não ficou muito bem aos olhos de quem estava vendo de longe, então eu abri o _Settings_ e troquei de _"default"_ para _"dark"_ e tudo ficou perfeito.
 
 Confesso que fiquei um pouco **_#HashTagXatiado_** com a surpresa de alguns na sala, realmente eles desconheciam tal funcionalidade.
 
