--- a/source/assets/stylesheets/components/_header.sass
+++ b/source/assets/stylesheets/components/_header.sass
@@ -12,5 +12,9 @@
     position: absolute
 
   .logo
-    +position(absolute, 40px null null 40px)
+    +position(absolute, 15px null null 15px)
     z-index: 10000
+
+    +media($mobile-large)
+      top: 40px
+      right: 40px
