--- a/source/layouts/posts.html.slim
+++ b/source/layouts/posts.html.slim
@@ -78,7 +78,11 @@ html.no-js
         .container
           meta content="#{current_page.date.strftime('%Y-%m-%d')}" itemprop="datePublished"
           span.article-meta
-            | Posted on the #{current_page.date.strftime('%d')} of #{current_page.date.strftime('%b')} #{current_page.date.strftime('%Y')}
+            = "#{current_page.date.strftime('%b')} #{current_page.date.strftime('%Y')}"
+            span.tags
+              = ' | '
+              - current_page.tags.each do |tag|
+                = link_to "##{tag}", tag_path(tag)
           h1.article-title itemprop="headline" = current_page.data.title
       .container
         article.article itemscope="" itemtype="http://schema.org/NewsArticle" role="article"
