--- a/source/partials/_article.html.slim
+++ b/source/partials/_article.html.slim
@@ -3,9 +3,13 @@ article.article
     h1.article-title
       = link_to article.title, article
     span.article-meta
-      = 'Posted on the ' + article.date.strftime('%d') + ' of ' + article.date.strftime('%B') + ' of ' + article.date.strftime('%Y')
-      span.divider
+      = article.date.strftime('%b') + ' ' + article.date.strftime('%Y')
+      = ' | '
       = link_to '0 comments', article.url + '#comments', class: 'disqus-comment-count', :'data-disqus-url' => "#{site_url}#{article.url}"
+      = ' | '
+      span.tags
+        - article.tags.each do |tag|
+          = link_to "##{tag}", tag_path(tag)
   p.article-summary
     = strip_tags(article.summary(160)) + ' '
     =link_to '[' + t(:read_more) + ']', article.url
