--- a/source/partials/_social-opengraph.html.slim
+++ b/source/partials/_social-opengraph.html.slim
@@ -3,8 +3,11 @@
   meta content="website" property="og:type"
   meta content="#{site_url}#{current_page.url}" property="og:url"
   meta content="#{site_author}" property="og:site_name"
-  meta content="#{site_url}" property="twitter:site"
-  meta content="#{twitter}" property="twitter:creator"
-  meta content="#{site_title}" property="twitter:title"
-  meta content="#{site_description}" property="twitter:description"
   meta content="#{image_path('social.jpg')}" property="og:image"
+
+  meta content="summary_large_image" name="twitter:card"
+  meta content="#{site_url}" name="twitter:site"
+  meta content="#{twitter}" name="twitter:creator"
+  meta content="#{site_title}" name="twitter:title"
+  meta content="#{site_description}" name="twitter:description"
+  meta content="#{image_path('social.jpg')}" name="twitter:image"
