Remove Rake for create posts

--- a/source/layouts/posts.html.slim
+++ b/source/layouts/posts.html.slim
@@ -10,6 +10,8 @@ html.no-js
     - else
       meta content=site_description name="description"
 
+    meta name="robots" content="index, follow"
+    meta name="author" content="Fernando Moreira"
     meta rel="canonical" href="#{site_url}#{current_page.url}"
     meta content="summary_large_image" name="twitter:card"
     meta content="#{site_url}" name="twitter:site"
