Add beautiful effect button

--- a/source/assets/stylesheets/base/_typography.sass
+++ b/source/assets/stylesheets/base/_typography.sass
@@ -1,7 +1,3 @@
-// Typography
-// ––––––––––––––––––––––––––––––––––––––––––––––––––
-// @import '//fonts.googleapis.com/css?family=Ubuntu:300,400,500,700'
-
 html
   font-size: $font-size-unit
 
@@ -95,6 +91,7 @@ blockquote
 
   p
     font-size: 1.6rem
+    font-weight: $font-weight-light
 
   & *:last-child
     margin: 0
