Add gulp and enable css on the content the html

--- a/source/partials/_footer.html.slim
+++ b/source/partials/_footer.html.slim
@@ -6,5 +6,7 @@ footer.footer
     = " by #{link_to(site_author, site_url)} "
     = "using #{link_to "middlemanapp.com", "http://middlemanapp.com" , :target => :blank }"
 
+= stylesheet_link_tag 'syntax'
+//= stylesheet_link_tag 'main.min'
 script#dsq-count-scr async="" data-cfasync="false" src="//#{disqus_shortname}.disqus.com/count.js"
 = javascript_include_tag "main"
