--- a/source/assets/stylesheets/components/_article.sass
+++ b/source/assets/stylesheets/components/_article.sass
@@ -148,7 +148,8 @@ iframe
 
 
 +media(max-width $tablet)
-  body.single
+  body.single,
+  body.about
     .image
       margin-left: 0
       margin-right: 0
