--- a/source/index.html.slim
+++ b/source/index.html.slim
@@ -18,3 +18,5 @@ section.hero
       = link_to t(:about_me), local_path(t('paths.about')), class: 'button-ghost'
 
     = partial 'partials/social'
+
+= stylesheet_link_tag 'main.min'
