--- a/source/partials/_footer.html.slim
+++ b/source/partials/_footer.html.slim
@@ -7,6 +7,7 @@ footer.footer
     = "using #{link_to "middlemanapp.com", "http://middlemanapp.com" , :target => :blank }"
 
 = stylesheet_link_tag 'syntax'
-= stylesheet_link_tag 'main.min'
+= stylesheet_link_tag 'main'
+
 script#dsq-count-scr async="" data-cfasync="false" src="//#{disqus_shortname}.disqus.com/count.js"
 = javascript_include_tag "main"
