--- a/source/partials/_head.html.slim
+++ b/source/partials/_head.html.slim
@@ -4,6 +4,7 @@ meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible"
 meta content="width=device-width, initial-scale=1, user-scalable=no" name="viewport"
 = partial "partials/inline-stylesheets"
 title= "#{page_title}"
+
 - if build?
   = feed_tag :atom, "#{blog.options.prefix.to_s}/feed.xml", title: "Atom Feed"
   link href="#{image_path('favicon/apple-icon-57x57.png')}" rel="apple-touch-icon" sizes="57x57"
@@ -27,7 +28,6 @@ title= "#{page_title}"
   meta content="#{site_author}" property="article:publisher"
   meta content="#{site_title}" property="og:site_name"
   meta content="#f7f7f7" name="theme-color"
-
   javascript:
     var _gaq = _gaq || [];
     _gaq.push(['_setAccount', '#{google_analytics_account}']);
@@ -35,6 +35,6 @@ title= "#{page_title}"
 
     (function() {
       var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-      ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+      ga.src = ('https:' == document.location.protocol ? 'https://' : 'http://') + "#{site_url}" + '/assets/javascripts/ga.js';
       var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
     })();
