--- a/source/partials/_footer.html.slim
+++ b/source/partials/_footer.html.slim
@@ -11,3 +11,12 @@ footer.footer
 
 script#dsq-count-scr async="" data-cfasync="false" src="//#{disqus_shortname}.disqus.com/count.js"
 = javascript_include_tag "main"
+
+- if build?
+  javascript:
+    window.smartlook||(function(d) {
+    var o=smartlook=function(){ o.api.push(arguments)},h=d.getElementsByTagName('head')[0];
+    var c=d.createElement('script');o.api=new Array();c.async=true;c.type='text/javascript';
+    c.charset='utf-8';c.src='//rec.smartlook.com/recorder.js';h.appendChild(c);
+    })(document);
+    smartlook('init', '2003a33e77eb7c7670b53ac44872f3986dc31497');
