moving sass files

--- a/source/assets/_sass/components/_article.sass
+++ b/source/assets/_sass/components/_article.sass
@@ -72,7 +72,7 @@ iframe
 
 .comments
   padding: $spacing-base
-  @extend .clearfix
+  +clearfix
 
   +media($desktop)
     padding: $spacing-big $spacing-small
