--- a/source/assets/_sass/main.sass
+++ b/source/assets/_sass/main.sass
@@ -5,6 +5,8 @@
 @import "font-face"
 
 @import "base/selection"
+@import "base/utility"
+@import "base/grid"
 @import "base/lists"
 @import "base/table"
 @import "base/forms"
