--- a/source/localizable/about.en.html.slim
+++ b/source/localizable/about.en.html.slim
@@ -11,7 +11,7 @@ section.container
   .card.card--about.text-center
     h2 Who am I?
 
-    img.avatar alt="" src="/assets/images/avatar.jpg" width="160px" height="160px"
+    img.avatar alt="" src="/assets/images/avatar.png" width="160px" height="160px"
 
     div itemscope="" itemtype="http://schema.org/Person"
       p
