improvement gulp, stylesheets files and build project

--- a/source/layouts/blog.html.slim
+++ b/source/layouts/blog.html.slim
@@ -15,4 +15,7 @@ html.no-js
       .container
         = yield
     = partial "partials/footer"
-    = stylesheet_link_tag 'main.min'
+    - if build?
+      = stylesheet_link_tag "main.min"
+    - else
+      = stylesheet_link_tag "main"
