--- a/source/layouts/layout.html.slim
+++ b/source/layouts/layout.html.slim
@@ -11,5 +11,8 @@ html.no-js
     - body_class = body_class.sub(/[_]/, '-')
   body class="#{body_class}"
     = yield
-    = stylesheet_link_tag 'main.min'
     = javascript_include_tag "main"
+    - if build?
+      = stylesheet_link_tag "main.min"
+    - else
+      = stylesheet_link_tag "main"
