--- a/source/layouts/blog.html.slim
+++ b/source/layouts/blog.html.slim
@@ -15,7 +15,8 @@ html.no-js
       .container
         = yield
     = partial "partials/footer"
-    - if build?
-      = stylesheet_link_tag "main.min"
-    - else
-      = stylesheet_link_tag "main"
+
+- if build?
+  = stylesheet_link_tag "main.min", { async: true }
+- else
+  = stylesheet_link_tag "main", { async: true }
