--- a/source/layouts/layout.html.slim
+++ b/source/layouts/layout.html.slim
@@ -11,8 +11,9 @@ html.no-js
     - body_class = body_class.sub(/[_]/, '-')
   body class="#{body_class}"
     = yield
-    = javascript_include_tag "main"
-    - if build?
-      = stylesheet_link_tag "main.min"
-    - else
-      = stylesheet_link_tag "main"
+    = javascript_include_tag "main", { async: true }
+
+- if build?
+  = stylesheet_link_tag "main.min"
+- else
+  = stylesheet_link_tag "main"
