--- a/source/assets/_sass/inline.sass
+++ b/source/assets/_sass/inline.sass
@@ -1,11 +1,12 @@
 @import "bourbon"
 
-@import "variables"
-@import "mixins"
+@import "utils/variables"
+@import "utils/mixins"
 
 @import "base/reset"
 @import "base/typography"
 @import "base/base"
+@import "base/grid"
 
 @import "components/hero"
 @import "components/navbar"
