--- a/source/assets/_sass/main.sass
+++ b/source/assets/_sass/main.sass
@@ -1,12 +1,11 @@
 @import "bourbon"
 
-@import "variables"
-@import "mixins"
-@import "font-face"
+@import "utils/variables"
+@import "utils/mixins"
+@import "utils/font-face"
+@import "utils/utility"
 
 @import "base/selection"
-@import "base/utility"
-@import "base/grid"
 @import "base/lists"
 @import "base/table"
 @import "base/forms"
@@ -14,4 +13,3 @@
 
 @import "components/paginate"
 @import "components/footer"
-@import "components/theme"
