--- a/source/assets/_sass/utils/variables.sass
+++ b/source/assets/_sass/utils/variables.sass
@@ -23,7 +23,7 @@ $color-black       : #000
 $color-silver      : #ceddd8
 $color-gray        : #222
 $color-base        : rgba($color-black, .8)
-$background-base   : darken($color-white, 2%)
+$background-base   : darken($color-white, 4%)
 $border-color-base : lighten($color-silver, 6%)
 $input-background  : $color-white
 
@@ -35,6 +35,8 @@ $spacing-small : 1.25rem    // 20px
 $spacing-base  : 1.875rem   // 30px
 $spacing-large : 2.5rem     // 40px
 $spacing-big   : 3.125rem   // 50px
+
+$default-feature : min-width
 
 $desktop-large : 105rem   // 1680px
 $desktop       : 80rem    // 1280px
