--- a/source/posts/2015-09-01-conhecendo-o-pre-processador-sass-parte-1.md.erb
+++ b/source/posts/2015-09-01-conhecendo-o-pre-processador-sass-parte-1.md.erb
@@ -2,7 +2,9 @@
 title: "#1 - Conhecendo o pré-processador SASS | Instalação"
 date: 2015-09-01
 description: "Todo desenvolvedor web deveria conhecer algum pré-processador CSS, seja ele Less, SASS, Stylus ou qualquer outro"
-keywords: "sass, css, scss, pre-processador, pre-processadores"
+image: /assets/images/posts/2015/09/conhecendo-o-pre-processador-sass.jpg
+categories: sass
+tags: "sass, css, pre-processador"
 ---
 
 Na minha opinião todo desenvolvedor web deveria conhecer algum pré-processador CSS, seja ele `Less`, `SASS`, `Stylus` ou qualquer outro.
