--- a/source/posts/2015-09-02-sass-variaveis-parte-2.md.erb
+++ b/source/posts/2015-09-02-sass-variaveis-parte-2.md.erb
@@ -3,6 +3,7 @@ title: "#2 - Conhecendo o pré-processador SASS | Variáveis"
 date: 2015-09-02
 description: "Conhecendo o pré-processador SASS - Variáveis"
 keywords: "sass, css, scss, pre-processador, pre-processadores, variáveis"
+image: /assets/images/posts/2015/09/conhecendo-o-pre-processador-sass.jpg
 categories:
 - sass
 tags:
