--- a/source/posts/2015-09-05-sass-parte-4-funcoes.md.erb
+++ b/source/posts/2015-09-05-sass-parte-4-funcoes.md.erb
@@ -3,12 +3,9 @@ title: "#4 - Conhecendo o pré processador SASS | Funções"
 date: 2015-09-05
 description: "Conhecendo o pré-processador SASS-Parte 4"
 keywords: "sass, css, scss, pre-processador, pre-processadores"
-categories:
-- sass
-tags:
-- sass
-- css
-- pre-processador
+image: /assets/images/posts/2015/09/conhecendo-o-pre-processador-sass.jpg
+categories: sass
+tags: "sass, css, pre-processador"
 ---
 
 <div class="images">
