--- a/source/posts/2015-10-13-usando-categorias-e-tags-no-jekyll.md.erb
+++ b/source/posts/2015-10-13-usando-categorias-e-tags-no-jekyll.md.erb
@@ -3,12 +3,8 @@ title: "Usando categorias e tags no Jekyll"
 date: 2015-10-13-usando-categorias-e-tags-no-jekyll.md.erb 21:35:51
 description: "GitHub Pages serviço é simplesmente incrível! E com a integração Jekyll ele fica ainda mais impressionante! Mas existem algumas limitações neste grande sistema automatizado"
 keywords: "jekyll, categorias, tags, blog"
-categories:
-- jekyll
-tags:
-- github
-- github-pages
-- jekyll
+categories: jekyll
+tags: github, gh-pages, jekyll
 ---
 
 > Esse artigo foi traduzido de: [How to use tags and categories on github pages without plugins](http://www.minddust.com/post/tags-and-categories-on-github-pages/)
