--- a/source/posts/2015-11-16-sass-e-atomic-design.md.erb
+++ b/source/posts/2015-11-16-sass-e-atomic-design.md.erb
@@ -2,7 +2,9 @@
 title: "SASS + Atomic design (parte 1)"
 date: 2015-11-16
 description: "SASS é um pré-processador incrível não acha? Mas muitos não sabem como organizar seus projetos com ele"
-keywords: "sass, atomic, design, css"
+image: /assets/images/posts/2015/09/conhecendo-o-pre-processador-sass.jpg
+categories: sass
+tags: "sass, css, pre-processador"
 ---
 
 **SASS** é um pré-processador incrível não acha? Mas muitos não sabem como organizar seus projetos com ele, nesse artigo vou lhe mostrar como organizar uma estrutura _"foda"_ usando **[SASS](http://sass-lang.com/)** e _**[Atomic Design](http://patternlab.io/about.html)**_, vem comigo.
