--- a/source/posts/2015-12-11-simplest-mais-um-tema-para-jekyll.md.erb
+++ b/source/posts/2015-12-11-simplest-mais-um-tema-para-jekyll.md.erb
@@ -3,6 +3,7 @@ title: "simplest - mais um tema para Jekyll"
 date: 2015-12-11 14:55:22
 description: "Olá, eu desenvolvi mais um tema para Jekyll, faça o download do simplest agora"
 keywords: "temas, jekyll, download, tema, free, gratuito, blog, front-end"
+image: //raw.githubusercontent.com/nandomoreirame/simplest/master/screenshot.png
 categories:
 - temas-jekyll
 tags:
