--- a/source/posts/2015-12-21-dotX-mais-um-tema-para-jekyll.md.erb
+++ b/source/posts/2015-12-21-dotX-mais-um-tema-para-jekyll.md.erb
@@ -3,6 +3,7 @@ title: "dotX - Mais um tema para Jekyll"
 date: 2015-12-21 20:55:22
 description: "Olá, eu desenvolvi mais um tema para Jekyll, faça o download do dotX agora"
 keywords: "temas, jekyll, download, tema, free, gratuito, blog, front-end"
+image: //raw.githubusercontent.com/nandomoreirame/dotX/master/screenshot.png
 categories:
 - temas-jekyll
 tags:
