--- a/source/posts/2016-01-02-yo-wordpress-iniciando-projetos-para-wordpress-em-segundos.md.erb
+++ b/source/posts/2016-01-02-yo-wordpress-iniciando-projetos-para-wordpress-em-segundos.md.erb
@@ -2,7 +2,9 @@
 title: "YeoPress, iniciando projetos WordPress em segundos"
 date: 2016-01-02
 description: "Sim, existe um Generator para WordPress, o YeoPress faz o download do WP e inicia uma estrutura complata pra você já sair codificando o seu projeto"
-keywords: "yo, yeoman, yo-wordpress, yeopress, generator, npm, wordpress, wp"
+image: /assets/images/posts/2016/01/yo-wordpress-command.png
+categories: Yeoman
+tags: yeoman, generator, npm, wordpress
 ---
 
 Esse é o meu primeiro artigo do ano de **2016**, então eu vou falar sobre **[Yeoman](http://yeoman.io/)** e o <abbr title="Content Management System">CMS</abbr> mais usado do mundo, o **[WordPress](https://wordpress.org/)**.
