--- a/source/posts/2016-01-10-wp-cli-uma-interface-de-linha-de-comando-para-wordpress.md.erb
+++ b/source/posts/2016-01-10-wp-cli-uma-interface-de-linha-de-comando-para-wordpress.md.erb
@@ -2,6 +2,7 @@
 title: "WP-CLI: Uma interface de linha de comando para WordPress"
 description: "Nesse artigo vou mostrar como instalar a WP-CLI, uma interface de linha de comando para WordPress"
 keywords: "wordpress, wp, cli, wp-cli, comando, linha, interface"
+image: /assets/images/posts/2016/01/wp-cli-help.png
 categories: wordpress
 tags: wordpress
 ---
