--- a/source/blog.html.slim
+++ b/source/blog.html.slim
@@ -8,19 +8,20 @@ per_page: 10
 header.page-title.js-text-parallax
   h1 Blog
 
-.blog-list
-  - page_articles.each_with_index do |article, i|
-    = partial "partials/article", locals: { :article => article }
+.container
+  .blog-list
+    - page_articles.each_with_index do |article, i|
+      = partial "partials/article", locals: { :article => article }
 
-- if paginate && num_pages > 1
-  nav.paginate
-    - if prev_page
-      = link_to 'Previous page', prev_page, class: 'previous-page button-white'
-    - else
-      = link_to 'Previous page', '#', class: 'previous-page button-white disabled'
-    span
-      | Page #{page_number} of #{num_pages}
-    - if next_page
-      = link_to 'Next page', next_page, class: 'next-page button-white'
-    - else
-      = link_to 'Next page', '#', class: 'next-page button-white disabled'
+  - if paginate && num_pages > 1
+    nav.paginate
+      - if prev_page
+        = link_to 'Previous page', prev_page, class: 'previous-page button-white'
+      - else
+        = link_to 'Previous page', '#', class: 'previous-page button-white disabled'
+      span
+        | Page #{page_number} of #{num_pages}
+      - if next_page
+        = link_to 'Next page', next_page, class: 'next-page button-white'
+      - else
+        = link_to 'Next page', '#', class: 'next-page button-white disabled'
