--- a/source/layouts/posts.html.slim
+++ b/source/layouts/posts.html.slim
@@ -75,7 +75,9 @@ html.no-js
   body class="#{body_class} single"
     = partial "partials/header"
     main.main role="main"
-      header.page-title.js-text-parallax
+      header.page-title.js-text-parallax style="background-image: url(#{current_article.data.image})"
+        - if current_article.data.image
+          .page-title__overlay
         .container
           meta content="#{current_page.date.strftime('%Y-%m-%d')}" itemprop="datePublished"
           span.article-meta
