--- a/source/posts/2015-09-05-sass-parte-3-mixins.md.erb
+++ b/source/posts/2015-09-05-sass-parte-3-mixins.md.erb
@@ -3,12 +3,9 @@ title: "#3 - Conhecendo o pré processador SASS | Mixins"
 date: 2015-09-05-sass-parte-3-mixins.md.erb
 description: "Mixin foi definitivamente algo novo para mim, você consegue passar valores por parâmetros assim como funções"
 keywords: "sass, css, scss, pre-processador, pre-processadores"
-categories:
-- sass
-tags:
-- sass
-- css
-- pre-processador
+images: /assets/images/posts/2015/09/conhecendo-o-pre-processador-sass.jpg
+categories: sass
+tags: "sass, css, pre-processador"
 ---
 
 <div class="image">
