--- a/source/posts/2015-09-27-sass-parte-5-placeholder.md.erb
+++ b/source/posts/2015-09-27-sass-parte-5-placeholder.md.erb
@@ -3,12 +3,9 @@ title: "#5 - Conhecendo o pré-processador SASS | Placeholder"
 date: 2015-09-27
 description: "Uma das funcionalidades mais legais do SASS é você poder criar placeholders para agrupamento de códigos repetidos"
 keywords: "sass, css, scss, pre-processador, pre-processadores"
-categories:
- - sass
-tags:
- - sass
- - css
- - pre-processador
+image: /assets/images/posts/2015/09/conhecendo-o-pre-processador-sass.jpg
+categories: sass
+tags: "sass, css, pre-processador"
 ---
 
 <div class="image">
