--- a/source/posts/2015-09-27-yeoman-generator-gulp-boilerplate.md.erb
+++ b/source/posts/2015-09-27-yeoman-generator-gulp-boilerplate.md.erb
@@ -2,13 +2,9 @@
 title: "Yeoman Generator Gulp Boilerplate"
 date: 2015-09-27
 description: "Eu criei um repositório no Github onde mantenho atualizado com um boilerplate para Gulp, o repositório era pra ser pessoal mas eu resolvi compartilhar."
-keywords: "gulp, gulpjs, yeoman, npm, generator"
-categories:
-- gulp
-tags:
-- gulp
-- generator
-- yeoman
+categories: gulp
+image: /assets/images/posts/2015/09/yeoman.jpg
+tags: gulp, generator, yeoman
 ---
 
 <div class="image">
