--- a/source/posts/2015-10-12-faco-front-end-de-graca.md.erb
+++ b/source/posts/2015-10-12-faco-front-end-de-graca.md.erb
@@ -3,11 +3,8 @@ title: "Faço front-end de graça, saiba como!"
 date: 2015-10-12
 description: "É isso mesmo que você leu, Faço front-end de graça, mas tem alguns requisitos necessários para que isso aconteça, vem comigo que te explico como"
 keywords: "front-end, frontend, html, css, free, freedom, job, projeto, open-source, open, source"
-categories:
-- geral
-tags:
-- front-end
-- open-source
+categories: geral
+tags: front-end, open-source, geral
 ---
 
 Você deve estar se perguntando: _**"Front-end de graça? Como assim?"**_
